Added video-list and login components. Added routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
-<app-breadcrumbs></app-breadcrumbs>
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+
+<div class="container">
+  <app-breadcrumbs></app-breadcrumbs>
+  <router-outlet></router-outlet>
 </div>
+
 <app-footer></app-footer>
 
