--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <app-logo></app-logo>
   <div class="buttons">
-    <button class="pure-button">User Login</button>
+    <button class="pure-button" routerLink='../login'>User Login</button>
     <button class="pure-button">Log OFF</button>
   </div>
 </header>
