--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-  <p>Copyright &copy; Videocources, All Rights Reserved</p>
+  <p>Copyright &copy; Videocourses, All Rights Reserved</p>
 </footer>
