Added courses list raw template

--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -1,3 +1,39 @@
-<p>
-  courses-list works!
-</p>
+<section>
+  <h2>Courses</h2>
+  <div class="container"><!-- TODO: move to toolbar component? -->
+    <div class="row">
+      <div class="column column-25">
+        <input type="text" placeholder="Name, fragment or date">
+      </div>
+      <div class="column column-25">
+        <button>Search</button>
+      </div>
+      <div class="column column-25 column-offset-25">
+        <button>Add course</button>
+      </div>
+    </div>
+  </div>
+  <div><!-- TODO: move to list component? -->
+    <div class="container"><!-- TODO: move to couse-list-item component -->
+      <div class="row">
+        <div class="column column-60">
+          <h3>Video Course #</h3>
+        </div>
+        <div class="column column-20">
+          XXmin XX.XX.XXXX
+        </div>
+        <div class="column column-20">
+          <button style="width: 100%;">Edit</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column column-80">
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+        <div class="column column-20">
+          <button style="width: 100%;">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
