Improved layout of header, footer and courses-list

--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -1,15 +1,15 @@
-<section>
+<section class="container">
   <h2>Courses</h2>
   <div class="container"><!-- TODO: move to toolbar component? -->
     <div class="row">
-      <div class="column column-25">
+      <div class="column column-30">
         <input type="text" placeholder="Name, fragment or date">
       </div>
-      <div class="column column-25">
+      <div class="column column-20">
         <button>Search</button>
       </div>
-      <div class="column column-25 column-offset-25">
-        <button>Add course</button>
+      <div class="column column-20 column-offset-30">
+        <button style="width: 100%;">Add course</button>
       </div>
     </div>
   </div>
