--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,7 @@
-<footer>
-  <p>Copyright &copy; Videocourses, All Rights Reserved</p>
+<footer class="container">
+  <div class="row">
+    <div class="column column-100">
+      <p>Copyright &copy; Videocourses, All Rights Reserved</p>
+    </div>
+  </div>
 </footer>
