--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,16 +1,3 @@
-header {
-  position: relative;
-}
-
-/* Larger than mobile screen */
-@media (min-width: 40.0rem) {
-  .buttons {
-    position: absolute;
-    top: 0.6rem;
-    right: 0;
-  }
-}
-
 button {
-  margin: 0 0 0 0.5rem;
+  width: 100%;
 }
