--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,13 @@
-<header>
-  <app-logo></app-logo>
-  <div class="buttons">
-    <button class="pure-button" routerLink='../login'>User Login</button>
-    <button class="pure-button">Log OFF</button>
+<header class="container">
+  <div class="row">
+    <div class="column column-60">
+      <app-logo></app-logo>
+    </div>
+    <div class="column column-20">
+      <button class="pure-button" routerLink='../login'>User Login</button>
+    </div>
+    <div class="column column-20">
+      <button class="pure-button">Log OFF</button>
+    </div>
   </div>
 </header>
