Added logo and header styles

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,11 +3,9 @@
     <div class="column column-60">
       <app-logo></app-logo>
     </div>
-    <div class="column column-20">
-      <button class="pure-button" routerLink='../login'>User Login</button>
-    </div>
-    <div class="column column-20">
-      <button class="pure-button">Log OFF</button>
+    <div class="column column-40">
+        <button class="button button-outline" routerLink='../login'>User Login</button>
+      <button class="button button-outline">Log OFF</button>
     </div>
   </div>
 </header>
