--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,3 +1,10 @@
 button {
-  width: 100%;
+  line-height: 1.9rem;
+  margin: 1rem 0.3rem 0;
+  padding: 1rem;
+  width: 10rem;
+}
+
+.column-40 {
+  text-align: right;
 }
