--- a/src/app/core/logo/logo.component.html
+++ b/src/app/core/logo/logo.component.html
@@ -1,1 +1,4 @@
-<a href="/"><h1>Videocourses</h1></a>
+<a href="/">
+  <img class="logo" src="./assets/img/logo.svg"/>
+  <h1>Videocourses</h1>
+</a>
