--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -6,32 +6,31 @@
         <input type="text" placeholder="Name, fragment or date">
       </div>
       <div class="column column-20">
-        <button>Search</button>
+        <button class="button button-outline">Search</button>
       </div>
-      <div class="column column-20 column-offset-30">
-        <button style="width: 100%;">Add course</button>
+      <div class="column column-20 column-offset-30 align-right">
+        <button class="button">Add course</button>
       </div>
     </div>
   </div>
   <div><!-- TODO: move to list component? -->
-    <div class="container"><!-- TODO: move to couse-list-item component -->
+    <div class="container course-item" *ngFor="let course of courses"><!-- TODO: move to couse-list-item component -->
       <div class="row">
-        <div class="column column-60">
-          <h3>Video Course #</h3>
+        <div class="column column-40">
+          <h3>{{course.title}}</h3>
         </div>
-        <div class="column column-20">
-          XXmin XX.XX.XXXX
+        <div class="column column-40">
+          <span class="min-duration">{{course.minDuration}} minutes</span>
+          <span class="creation-date">{{course.creationDate.toString()}}</span>
         </div>
-        <div class="column column-20">
-          <button style="width: 100%;">Edit</button>
+        <div class="column column-20 align-right">
+          <button class="button button-outline sm">Edit</button>
+          <button class="button button-outline sm">Delete</button>
         </div>
       </div>
       <div class="row">
-        <div class="column column-80">
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-        </div>
-        <div class="column column-20">
-          <button style="width: 100%;">Delete</button>
+        <div class="column column-100">
+          {{course.description}}
         </div>
       </div>
     </div>
