--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-<app-header></app-header>
+<div class="wrapper">
 
-<div class="container">
-  <app-breadcrumbs></app-breadcrumbs>
-  <router-outlet></router-outlet>
+  <app-header></app-header>
+
+  <div class="container">
+    <app-breadcrumbs></app-breadcrumbs>
+    <router-outlet></router-outlet>
+  </div>
+
 </div>
 
 <app-footer></app-footer>
