--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="column column-60">
       <app-logo></app-logo>
     </div>
-    <div class="column column-40">
+    <div class="column column-40 controls">
         <button class="button button-outline" routerLink='../login'>User Login</button>
       <button class="button button-outline">Log OFF</button>
     </div>
