--- a/src/app/core/logo/logo.component.css
+++ b/src/app/core/logo/logo.component.css
@@ -2,9 +2,10 @@ img.logo {
   height: 4.6rem;
   position: absolute;
   top: 0.4rem;
+  left: 0.5rem;
 }
 
 h1 {
   display: inline;
-  margin-left: 7rem;
+  margin-left: 8rem;
 }
