Added borders for header and footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,15 +8,20 @@ html {
 *,
 *:before,
 *:after {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
 }
 
-body {
+header, footer {
+  display: block;
   margin: 0;
 }
 
 p {
   margin: 0;
+}
+
+.wrapper {
+  min-height: calc(100vh - 4rem - 6px);
 }
