--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -1,5 +1,9 @@
 footer {
-  height: 3rem;
-  line-height: 3rem;
+  border: 1px solid #d1d1d1;
+  border-bottom: none;
+  border-radius: 0.5rem 0.5rem 0 0;
+  display: block;
+  height: 4rem;
+  line-height: 4rem;
   text-align: right;
 }
