--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,19 +1,22 @@
 header {
-  padding: 1rem 0 0 0;
+  border: 1px solid #d1d1d1;
+  border-top: none;
+  border-radius: 0 0 0.5rem 0.5rem;
+  padding: 1rem;
 }
 
-button {
+header button {
   line-height: 1.9rem;
   margin: 1rem 0.3rem 0;
   padding: 1rem;
   width: 10rem;
 }
 
-.controls {
+header .controls {
   text-align: right;
 }
 
-app-logo {
+header app-logo {
   display: block;
   position: relative;
 }
