--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -19,8 +19,8 @@
           <h3>{{course.title}}</h3>
         </div>
         <div class="column column-40">
-          <span class="min-duration">{{course.minDuration}} minutes</span>
-          <span class="creation-date">{{course.creationDate.toString()}}</span>
+          <span class="min-duration">{{ course.minDuration | videoDiration:"h m" }}</span>
+          <span class="creation-date">{{ course.creationDate | date:"dd.MM.yyyy" }}</span>
         </div>
         <div class="column column-20 align-right">
           <button class="button button-outline sm">Edit</button>
