--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -1,37 +1,18 @@
 <section class="container">
-  <div class="container"><!-- TODO: move to toolbar component? -->
+  <div class="container">
     <div class="row">
       <div class="column column-30">
-        <input type="text" placeholder="Name, fragment or date">
+        <input type="text" [(ngModel)]="searchString" (keyup.enter)="findCourse(searchString)" placeholder="Name, fragment or date">
       </div>
       <div class="column column-20">
-        <button class="button button-outline">Search</button>
+        <button class="button button-outline" (click)="findCourse(searchString)">Search</button>
       </div>
       <div class="column column-20 column-offset-30 align-right">
-        <button class="button">Add course</button>
+        <button class="button" (click)="addCourse()">Add course</button>
       </div>
     </div>
   </div>
-  <div><!-- TODO: move to list component? -->
-    <div class="container course-item" *ngFor="let course of courses"><!-- TODO: move to couse-list-item component -->
-      <div class="row">
-        <div class="column column-40">
-          <h3>{{course.title}}</h3>
-        </div>
-        <div class="column column-40">
-          <span class="min-duration">{{ course.minDuration | videoDiration:"h m" }}</span>
-          <span class="creation-date">{{ course.creationDate | date:"dd.MM.yyyy" }}</span>
-        </div>
-        <div class="column column-20 align-right">
-          <button class="button button-outline sm">Edit</button>
-          <button class="button button-outline sm">Delete</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="column column-100">
-          {{course.description}}
-        </div>
-      </div>
-    </div>
+  <div>
+    <app-course *ngFor="let course of courses" [title]="course.title" [minDuration]="course.minDuration" [creationDate]="course.creationDate" [description]="course.description"></app-course>
   </div>
 </section>
