--- a/src/app/courses/course/course.component.html
+++ b/src/app/courses/course/course.component.html
@@ -1,20 +1,14 @@
-<div class="container course-item">
-  <div class="row">
-    <div class="column column-40">
-      <h3>{{title}}</h3>
-    </div>
-    <div class="column column-40">
-      <span class="min-duration">{{ minDuration | videoDiration:"h m" }}</span>
-      <span class="creation-date">{{ creationDate | date:"dd.MM.yyyy" }}</span>
-    </div>
-    <div class="column column-20 align-right">
-      <button class="button button-outline sm">Edit</button>
-      <button class="button button-outline sm">Delete</button>
-    </div>
-  </div>
-  <div class="row">
-    <div class="column column-100">
-      {{description}}
-    </div>
+<div class="course-item">
+  <h3>{{course.title}} <span>{{ course.minDuration | videoDiration:"h m" }} {{ course.creationDate | date:"dd.MM.yyyy" }}</span></h3>
+  {{course.description}}
+  <div class="buttons">
+    <button class="button button-outline sm" (click)="editCourse(id)">
+      <svg><use xlink:href='#icon-edit'/></svg>
+      Edit
+    </button>
+    <button class="button button-outline sm" (click)="deleteCourse(id)">
+      <svg><use xlink:href='#icon-delete'/></svg>
+      Delete
+    </button>
   </div>
 </div>
