--- a/src/app/courses/course/course.component.scss
+++ b/src/app/courses/course/course.component.scss
@@ -3,31 +3,40 @@
   border-radius: 0.5rem;
   padding: 0.5rem 14rem 0.5rem 0.5rem;
   position: relative;
-  margin-bottom: 0.5rem; }
-  .course-item h3 {
+  margin-bottom: 0.5rem;
+
+  h3 {
     position: relative;
     padding-right: 20%;
-    margin: 0; }
-    .course-item h3 span {
+    margin: 0;
+
+    span {
       font-size: 1.4rem;
       position: absolute;
       top: 0.7rem;
       right: 0;
       text-align: right;
-      width: 20%; }
-  .course-item .buttons {
+      width: 20%;
+    }
+  }
+
+  .buttons {
     position: absolute;
     top: 0;
     right: 0.5rem;
-    width: 12rem; }
-    .course-item .buttons button {
+    width: 12rem;
+
+    button {
       height: 3rem;
       line-height: normal;
       margin: 0.25rem 0;
-      width: 100%; }
-      .course-item .buttons button svg {
+      width: 100%;
+
+      svg {
         fill: #9b4dca;
         height: 1em;
-        width: 1em; }
-
-/*# sourceMappingURL=course.component.css.map */
+        width: 1em;
+      }
+    }
+  }
+}
