--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <app-header [title]="title"></app-header>
+  <app-header></app-header>
   <div class="container">
     <app-breadcrumbs></app-breadcrumbs>
     <router-outlet></router-outlet>
