--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -1,22 +1,19 @@
 header {
-  border: 1px solid #d1d1d1;
-  border-top: none;
-  border-radius: 0 0 0.5rem 0.5rem;
-  padding: 1rem;
+  padding: 1rem 0 0 0;
 }
 
-header button {
+button {
   line-height: 1.9rem;
   margin: 1rem 0.3rem 0;
   padding: 1rem;
   width: 10rem;
 }
 
-header .controls {
+.controls {
   text-align: right;
 }
 
-header app-logo {
+app-logo {
   display: block;
   position: relative;
 }
