--- a/src/app/courses/courses-list/courses-list.component.css
+++ b/src/app/courses/courses-list/courses-list.component.css
@@ -1,20 +1,23 @@
-.toolbar {
-  padding: 0 13rem 0 0;
-  position: relative; }
-  .toolbar .search {
-    margin: 0 0.5rem 0 0;
-    width: 30%; }
-  .toolbar .add {
-    position: absolute;
-    right: 0.5rem;
-    width: 12rem;
-    padding: 0 0.3rem; }
-    .toolbar .add svg {
-      height: 1em;
-      width: 1em;
-      fill: #FFF; }
+.button.sm {
+  line-height: 1.2rem;
+  margin: 0 0.2rem;
+  padding: 0 0.5rem;
+  height: 2rem;
+  width: 10rem;
+}
 
-.load-more {
-  width: 100%; }
+.align-right {
+ text-align: right;
+}
 
-/*# sourceMappingURL=courses-list.component.css.map */
+.min-duration {
+  margin-right: 2rem;
+}
+
+.creation-date {
+  font-size: 0.8em;
+}
+
+.course-item {
+  margin: 0.5rem 0;
+}
