--- a/src/app/courses/courses-list/courses-list.component.scss
+++ b/src/app/courses/courses-list/courses-list.component.scss
@@ -24,3 +24,11 @@
 .load-more {
   width: 100%;
 }
+
+.no-data {
+  border: 1px solid #d1d1d1;
+  padding: 0.5rem;
+  margin: 2rem 0;
+  text-align: center;
+  text-transform: uppercase;
+}
