--- a/src/app/core/logo/logo.component.html
+++ b/src/app/core/logo/logo.component.html
@@ -1,4 +1,4 @@
 <a href="/">
-  <img class="logo" src="./assets/img/logo.svg"/>
+  <svg class="logo"><use xlink:href='./assets/img/sprites.svg#app-logo'/></svg>
   <h1>Videocourses</h1>
 </a>
