--- a/src/app/courses/course/course.component.scss
+++ b/src/app/courses/course/course.component.scss
@@ -1,16 +1,50 @@
 .course-item {
-  border: 1px solid #d1d1d1;
+  background: linear-gradient(to bottom right, transparent 60%, lighten(#d1d1d1, 10%));
+  border: 2px solid #d1d1d1;
   border-radius: 0.5rem;
   padding: 0.5rem 14rem 0.5rem 0.5rem;
   position: relative;
   margin-bottom: 0.5rem;
+
+  .star {    
+    border-left: 2px solid #606c76;
+    display: none;
+    font-size: 90%;
+    padding-left: 0.8rem;
+
+    svg {
+      fill: #cab34d;
+      height: 2rem;
+      width: 2rem;
+
+      &:hover {
+        fill: #606c76;
+      }
+    }
+  }
+
+  &.fresh {
+    border-color: #7dca4d;
+  }
+
+  &.upcomming {
+    border-color: #5b4dca;
+  }
+
+  &.top-rated {
+    background: linear-gradient(to bottom right, transparent 60%, lighten(#cab34d, 25%));
+
+    .star {
+      display: inline;
+    }
+  }
 
   h3 {
     position: relative;
     padding-right: 20%;
     margin: 0;
 
-    span {
+    .duration-creation {
       font-size: 1.4rem;
       position: absolute;
       top: 0.7rem;
