--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -20,3 +20,8 @@ header app-logo {
   display: block;
   position: relative;
 }
+
+header .user-name {
+  font-weight: bold;
+  margin: 0 0.5rem;
+}
