--- a/src/app/courses/courses-list/courses-list.component.css
+++ b/src/app/courses/courses-list/courses-list.component.css
@@ -1,5 +1,5 @@
 .toolbar {
-  padding: 0 13rem 0 0;
+  padding: 0 13rem 0.5rem 0;
   position: relative; }
   .toolbar .search {
     margin: 0 0.5rem 0 0;
