migration to bootstrap in progress

--- a/src/app/core/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/core/breadcrumbs/breadcrumbs.component.html
@@ -1,3 +1,5 @@
-<ul class="breadscrumbs" role="navigation">
-  <li><a href="">Courses</a></li>
-</ul>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item active"><a href="#" aria-current="page">Courses</a></li>
+  </ol>
+</nav>
