--- a/src/app/courses/course/course.component.scss
+++ b/src/app/courses/course/course.component.scss
@@ -1,4 +1,4 @@
-.course-item {
+/* .course-item {
   background: linear-gradient(to bottom right, transparent 60%, lighten(#d1d1d1, 10%));
   border: 2px solid #d1d1d1;
   border-radius: 0.5rem;
@@ -74,3 +74,4 @@
     }
   }
 }
+ */
