--- a/src/app/courses/courses-list/courses-list.component.scss
+++ b/src/app/courses/courses-list/courses-list.component.scss
@@ -1,4 +1,4 @@
-.toolbar {
+/* .toolbar {
   padding: 0 13rem 0.5rem 0;
   position: relative;
 
@@ -32,3 +32,4 @@
   text-align: center;
   text-transform: uppercase;
 }
+ */
