--- a/src/app/core/logo/logo.component.html
+++ b/src/app/core/logo/logo.component.html
@@ -1,4 +1,4 @@
-<a href="/">
-  <svg class="logo"><use xlink:href='./assets/img/sprites.svg#app-logo'/></svg>
-  <h1>Videocourses</h1>
+<a class="navbar-brand" href="#">
+  <svg class="d-inline-block align-top" alt=""><use xlink:href='./assets/img/sprites.svg#app-logo'/></svg>
+  Videocourses
 </a>
