--- a/src/styles.css
+++ b/src/styles.css
@@ -1,40 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/milligram/dist/milligram.css";
-
-html {
-  box-sizing: border-box;
+@import url(../node_modules/bootstrap/dist/css/bootstrap.css);
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
 }
 
-body {
-  min-width: 500px;
+app-header .user-name {
+  font-weight: bold;
+  margin-right: 1rem;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+app-logo svg {
+  height: 30px;
+  width: 30px;
 }
 
-header, footer {
-  display: block;
-  margin: 0;
+app-courses-list .star svg {
+  height: 1.4rem;
+  width: 1.4rem;
+  fill: #6c757d;
 }
-
-p {
-  margin: 0;
-}
-
-span.small {
-  font-size: 0.8em;
-  font-weight: normal;
-}
-
-.hidden {
-  display: none;
-}
-
-.wrapper {
-  min-height: calc(100vh - 4rem);
+app-courses-list button svg {
+  height: 1.4rem;
+  width: 1.4rem;
+  fill: #6c757d;
 }
