Bootstrap migration finished

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,13 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
   <app-logo></app-logo>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav ml-auto" >
-      <span class="navbar-text user-name" *ngIf="authService.isAuthenticated()">{{ authService.getUserInfo() }}</span>
-      <button class="btn btn-outline-secondary" type="button" *ngIf="!authService.isAuthenticated()" routerLink='../login'>Login</button>
-      <button class="btn btn-outline-secondary" type="button" *ngIf="authService.isAuthenticated()" (click)="logout()">Log off</button>
-    </div>
+  <div class="navbar-nav ml-auto" >
+    <span class="navbar-text user-name" *ngIf="authService.isAuthenticated()">{{ authService.getUserInfo() }}</span>
+    <button class="btn btn-outline-secondary" type="button" *ngIf="!authService.isAuthenticated()" routerLink='../login'>Login</button>
+    <button class="btn btn-outline-secondary" type="button" *ngIf="authService.isAuthenticated()" (click)="logout()">Log off</button>
   </div>
 </nav>
