--- a/src/app/users/login/login.component.html
+++ b/src/app/users/login/login.component.html
@@ -1,8 +1,14 @@
-<div class="container">
-  <div class="row">
-    <div class="column column-50 column-offset-25 login-form">  <p class="login-error" *ngIf="err">{{ err }}</p>
-      <label>Login <span class="small">(required)</span><input type="text" [(ngModel)]="usrLogin"></label>
-      <label>Password <span class="small">(required)</span><input type="password" [(ngModel)]="usrPwd" (keyup.enter)="login()"></label>
-      <button class="button" (click)="login()">Login</button></div>
+<div class="container pt-5 pb-5">
+  <div class="row justify-content-md-center">
+    <div class="col col-lg-3 border rounded shadow-sm">
+      <div class="form-group pt-3">
+        <p class="text-warning" *ngIf="err">{{ err }}</p>
+        <label>Login <span class="small text-info">(required)</span></label>
+        <input class="form-control" type="text" [(ngModel)]="usrLogin">
+        <label>Password <span class="small text-info">(required)</span></label>
+        <input class="form-control" type="password" [(ngModel)]="usrPwd" (keyup.enter)="login()">
+        <button class="btn btn-primary mt-3 form-control" (click)="login()">Login</button>
+      </div>
+    </div>
   </div>
 </div>
