--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 60px;
+}
+
+.breadcrumb {
+  background-color: transparent;
+  background: transparent;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -31,11 +45,58 @@ app-courses-list {
     fill: #6c757d;
   }
   
-  button {
+  .btn-outline-secondary {
     svg {
       height: 1.4rem;
       width: 1.4rem;
       fill: #6c757d;
+    }
+
+    &:hover {
+      svg {
+        fill: #fff;
+      }
+    }
+  }
+}
+
+app-course {
+
+  .card {
+    &.fresh {
+      border-color: #28a745;
+    }
+  
+    &.upcomming {
+      border-color: #007bff;
+    }
+
+    .star {
+      svg {
+        fill: #ffc107;
+        height: 1em;
+        width: 1em;
+      }
+    }
+  }
+
+  button {
+    svg {
+      margin-top: -0.2em;
+      height: 1em;
+      width: 1em;
+    }
+
+    &.btn-outline-primary svg {
+      fill: #007bff;
+    }
+    
+    &.btn-outline-danger svg {
+      fill: #dc3545;
+    }
+
+    &:hover svg {
+      fill: #fff;
     }
   }
 }
