--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container">
+  <div class="container text-right">
     <span class="text-muted">Copyright &copy; Videocourses, All Rights Reserved</span>
   </div>
 </footer>
