--- a/src/app/courses/course/course.component.html
+++ b/src/app/courses/course/course.component.html
@@ -1,30 +1,23 @@
-<!-- <div class="course-item" [ngClass]="{ 'top-rated': course.topRated }" [appCourseBorder]="course.creationDate">
-  <h3>{{course.title | uppercase }}
-    <span class="star"><svg><use xlink:href='./assets/img/sprites.svg#icon-star'/></svg></span>
-    <span class="duration-creation">{{ course.minDuration | videoDuration:"h m" }} {{ course.creationDate | date:"dd.MM.yyyy" }}</span>
-  </h3>
-  {{course.description}}
-  <div class="buttons">
-    <button class="button button-outline sm edit" (click)="editCourse(id)">
-      <svg><use xlink:href='./assets/img/sprites.svg#icon-edit'/></svg>
-      Edit
-    </button>
-    <button class="button button-outline sm delete" (click)="deleteCourse(id)">
-      <svg><use xlink:href='./assets/img/sprites.svg#icon-delete'/></svg>
-      Delete
-    </button>
+<div class="card mt-2" [ngClass]="{ 'bg-light': course.topRated }" [appCourseBorder]="course.creationDate">
+  <div class="card-header container">
+    <div class="row">
+      <div class="col">
+        {{course.title | uppercase }} <span class="star" [ngClass]="{ 'd-none': !course.topRated }"> | <svg><use xlink:href='./assets/img/sprites.svg#icon-star'/></svg></span>
+      </div>
+      <div class="col-sm text-right">
+        {{ course.minDuration | videoDuration:"h m" }} {{ course.creationDate | date:"dd.MM.yyyy" }}
+      </div>
+    </div>
   </div>
-</div> -->
-
-<div class="card" [ngClass]="{ 'top-rated': course.topRated }" [appCourseBorder]="course.creationDate">
-  <div class="card-header">
-    {{course.title | uppercase }} <span class="star"><svg><use xlink:href='./assets/img/sprites.svg#icon-star'/></svg></span>
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">{{ course.minDuration | videoDuration:"h m" }} {{ course.creationDate | date:"dd.MM.yyyy" }}</h5>
-    <p class="card-text">{{course.description}}</p>
-    <button class="btn btn-outline-primary"><svg><use xlink:href='./assets/img/sprites.svg#icon-edit'/></svg> Edit</button>
-    
-    <button class="btn btn-outline-danger"><svg><use xlink:href='./assets/img/sprites.svg#icon-delete'/></svg> Delete</button>
+  <div class="card-body container">
+    <div class="row">
+      <div class="col-lg-10 col-md-8">
+        <p class="card-text">{{course.description}}</p>
+      </div>
+      <div class="col-lg-2 col-md-4 text-right">
+        <button class="btn btn-sm btn-outline-primary w-100"><svg><use xlink:href='./assets/img/sprites.svg#icon-edit'/></svg> Edit</button>
+        <button class="btn btn-sm btn-outline-danger mt-2 w-100"><svg><use xlink:href='./assets/img/sprites.svg#icon-delete'/></svg> Delete</button>
+      </div>
+    </div>
   </div>
 </div>
