--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  
+<div class="container pb-2">
+
   <div class="row">
     <div class="form-group col-md-7">
       <input class="form-control search" type="text" [(ngModel)]="searchString" (keyup.enter)="findCourse(searchString)" placeholder="Name, fragment or date">
@@ -15,7 +15,7 @@
   <div class="container">
     <app-course *ngFor="let course of visibleCourses | orderBy:'creationDate':'dsc'; let i = index" [course]="course" (edit)="editCourse(course)" (delete)="deleteCourse(course.id)"></app-course>
     <div class="no-data" *ngIf="visibleCourses.length === 0">No data. Feel free to add new course.</div>
-    <button type="button" class="btn btn-outline-primary load-more w-100" (click)="loadMore()" *ngIf="visibleCourses.length > 0">Load more</button>
+    <button type="button" class="btn btn-outline-primary load-more w-100 mt-2" (click)="loadMore()" *ngIf="visibleCourses.length > 0">Load more</button>
   </div>
 
 </div>
