Bootstrap dialog applied

--- a/src/app/courses/dlg-confirm/dlg-confirm.component.html
+++ b/src/app/courses/dlg-confirm/dlg-confirm.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h4 class="modal-title">Confirmation requared</h4>
-  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+  <button type="button" class="close" aria-label="Close" (click)="activeModal.close('Cross click')">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
@@ -8,6 +8,6 @@
   <p>{{ msg }}</p>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
+  <button type="button" class="btn btn-warning" (click)="activeModal.close('OK')">OK</button>
+  <button type="button" class="btn btn-secondary" (click)="activeModal.close('Close click')">Close</button>
 </div>
