--- a/src/app/courses/course/course.component.html
+++ b/src/app/courses/course/course.component.html
@@ -15,8 +15,12 @@
         <p class="card-text">{{course.description}}</p>
       </div>
       <div class="col-lg-2 col-md-4 text-right">
-        <button class="btn btn-sm btn-outline-primary w-100"><svg><use xlink:href='./assets/img/sprites.svg#icon-edit'/></svg> Edit</button>
-        <button class="btn btn-sm btn-outline-danger mt-2 w-100"><svg><use xlink:href='./assets/img/sprites.svg#icon-delete'/></svg> Delete</button>
+        <button class="btn btn-sm btn-outline-primary w-100" (click)="editCourse(id)">
+          <svg><use xlink:href='./assets/img/sprites.svg#icon-edit'/></svg> Edit
+        </button>
+        <button class="btn btn-sm btn-outline-danger mt-2 w-100" (click)="deleteCourse(id)">
+          <svg><use xlink:href='./assets/img/sprites.svg#icon-delete'/></svg> Delete
+        </button>
       </div>
     </div>
   </div>
