--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -15,7 +15,7 @@
   <div class="container">
     <app-course *ngFor="let course of visibleCourses | orderBy:'creationDate':'dsc'; let i = index" [course]="course" (edit)="editCourse(course)" (delete)="deleteCourse(course.id)"></app-course>
     <div class="no-data" *ngIf="visibleCourses.length === 0">No data. Feel free to add new course.</div>
-    <button type="button" class="btn btn-outline-primary load-more w-100 mt-2" (click)="loadMore()" *ngIf="visibleCourses.length > 0">Load more</button>
+    <button type="button" class="btn btn-outline-primary load-more w-100 mt-2 load-more" (click)="loadMore()" *ngIf="visibleCourses.length > 0">Load more</button>
   </div>
 
 </div>
