Added date input

--- a/src/app/courses/date-input/date-input.component.html
+++ b/src/app/courses/date-input/date-input.component.html
@@ -1,3 +1,8 @@
-<p>
-  date-input works!
-</p>
+<div class="form-group row">
+  <div class="col-3">
+    <label class="mt-2" for="date-input">Date</label>
+  </div>
+  <div class="col-3">
+    <input type="text" class="form-control" id="date-input" placeholder="05/29/2018">  
+  </div>
+</div>
