Added fakeDB to auth service

--- a/src/app/core/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/core/breadcrumbs/breadcrumbs.component.html
@@ -1,7 +1,8 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item" *ngFor="let breadcrumb of breadcrumbs" class="breadcrumb-item">
-      <a routerLink="breadcrumb.url" aria-current="page">{{ breadcrumb.label }}</a>
+    <li class="breadcrumb-item" *ngFor="let breadcrumb of breadcrumbs; let last = last" class="breadcrumb-item">
+      <a *ngIf="!last"routerLink="{{ breadcrumb.url }}" aria-current="page">{{ breadcrumb.label }}</a>
+      <span *ngIf="last">{{ breadcrumb.label }}</span>
     </li>
   </ol>
 </nav>
