--- a/src/app/courses/create-course/create-course.component.html
+++ b/src/app/courses/create-course/create-course.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <div class="form-group">
     <label for="add-title">Title</label>
     <input type="text" class="form-control" id="add-title" placeholder="Course title" [(ngModel)]="course.title">  
