--- a/src/app/courses/create-course/create-course.component.html
+++ b/src/app/courses/create-course/create-course.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="form-group">
     <label for="add-title">Title</label>
-    <input type="text" class="form-control" id="add-title" placeholder="Course title" [(ngModel)]="course.title">  
+    <input type="text" class="form-control" id="add-title" placeholder="Course title" [(ngModel)]="course.name">  
   </div>
   <div class="form-group">
     <label for="add-description">Description</label>
