--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="form-group col-md-7">
-      <input class="form-control search" type="text" [(ngModel)]="searchString" (keyup.enter)="findCourse(searchString)" placeholder="Name, fragment or date">
+      <input class="form-control search" type="text" [(ngModel)]="searchString" (ngModelChange)="findCourse($event)" placeholder="Name, fragment or date">
     </div>
     <div class="form-group col-md-2">
       <button class="btn btn-outline-secondary w-100 search" type="button" (click)="findCourse(searchString)">Search</button>
