--- a/src/styles.css
+++ b/src/styles.css
@@ -72,3 +72,15 @@ app-course button.btn-outline-danger svg {
 app-course button:hover svg {
   fill: #fff;
 }
+
+app-loader {
+  background: #fff;
+  font-size: 50pt;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.9;
+  display: flex;
+}
