--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,3 +100,15 @@ app-course {
     }
   }
 }
+
+app-loader {
+  background: #fff;
+  font-size: 50pt;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.9;
+  display: flex;
+}
