--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header [title]="title"></app-header>
 <main role="main" class="container">
-  <app-breadcrumbs *ngIf="authService.isAuthenticated()"></app-breadcrumbs>
+  <app-breadcrumbs *ngIf="true"></app-breadcrumbs>
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
