--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="form-group col-md-7">
-      <!-- <input class="form-control search" type="text" [(ngModel)]="searchString" (ngModelChange)="findCourse($event)" placeholder="Name, fragment or date"> -->
+      <input class="form-control search" type="text" [(ngModel)]="searchString" (ngModelChange)="findCourse($event)" placeholder="Name, fragment or date">
     </div>
     <div class="form-group col-md-2">
     </div>
@@ -12,9 +12,9 @@
   </div>
 
   <div class="container">
-    <!-- <app-course *ngFor="let course of visibleCourses | orderBy:'creationDate':'dsc'; let i = index" [course]="course" (edit)="editCourse(course.id)" (delete)="deleteCourse(course.id)"></app-course> -->
-    <!-- <div class="no-data" *ngIf="visibleCourses.length === 0">No data. Feel free to add new course.</div> -->
-    <!-- <button type="button" class="btn btn-outline-primary load-more w-100 mt-2 load-more" (click)="loadNextPage()" *ngIf="visibleCourses.length > 0">Load more</button> -->
+    <app-course *ngFor="let course of coursesList$ | async | orderBy:'date':'dsc'" [course]="course" (edit)="editCourse(course.id)" (delete)="deleteCourse(course.id)"></app-course>
+    <div class="no-data" *ngIf="(coursesList$ | async)?.length === 0">No data. Feel free to add new course.</div>
+    <button type="button" class="btn btn-outline-primary load-more w-100 mt-2 load-more" (click)="loadNextPage()" *ngIf="(coursesList$ | async)?.length > 0">Load more</button>
   </div>
 
 </div>
